# ESP32_C3

./: README.md
http_server_spi/: .gitignore  CMakeLists.txt  http_server_spi.code-workspace  sdkconfig  sdkconfig.old
http_server_spi/Core/: CMakeLists.txt
http_server_spi/Core/Inc/main/: config.h  main.h  mod_cfg.h
http_server_spi/Core/Src/main/: main.c  mod_cfg.c
http_server_spi/example/: esp_http_client_example.c  esp_rest_main.c  example.h  rest_server.c
